--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 			<version>2.0.2</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.bcel</groupId>
+			<artifactId>bcel</artifactId>
+			<version>5.2</version>
+		</dependency>
+            
 
 		<dependency>
 			<groupId>junit</groupId>
