--- a/pom.xml
+++ b/pom.xml
@@ -18,24 +18,32 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>
+		<repository>
+			<id>ubiquitos</id>
+			<url>http://ubiquitos.googlecode.com/svn/trunk/src/Java/maven/</url>
+		</repository>
+	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>ubiquitos</groupId>
 			<artifactId>uos.core</artifactId>
-			<version>2.2.0_DEV</version>
+			<version>2.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>luaj</groupId>
 			<artifactId>luaj-jse</artifactId>
 			<version>2.0.2</version>
-			<type>jar</type>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/luaj-jse-2.0.2.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.bcel</groupId>
 			<artifactId>bcel</artifactId>
 			<version>5.2</version>
 		</dependency>
-            
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -47,6 +55,12 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert-core</artifactId>
+			<version>2.0M8</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
