--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.unbiquitous.driver</groupId>
-	<artifactId>execution</artifactId>
+	<artifactId>uos-execution</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<description>Driver which allows a Device to host foreign code.</description>
 
@@ -28,9 +28,9 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>ubiquitos</groupId>
-			<artifactId>uos.core</artifactId>
-			<version>2.2.1_DEV</version>
+			<groupId>org.unbiquitous</groupId>
+			<artifactId>uos-core</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
@@ -75,13 +75,6 @@
 			<groupId> org.abstractmeta</groupId>
 			<artifactId>compilation-toolbox</artifactId>
 			<version>0.3.0</version>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>ubiquitos</groupId>
-			<artifactId>uos.tcp_udp.plugin</artifactId>
-			<version>2.2.1_DEV</version>
 			<scope>test</scope>
 		</dependency>
 		
