--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,6 @@
 		</plugins>
 	</build>
 	
-	<repositories>
-		<repository>
-			<id>ubiquitos</id>
-			<url>http://ubiquitos.googlecode.com/svn/trunk/src/Java/maven/</url>
-		</repository>
-	</repositories>
-	
 	<dependencies>
 		<dependency>
 			<groupId>org.unbiquitous</groupId>
@@ -36,8 +29,6 @@
 			<groupId>luaj</groupId>
 			<artifactId>luaj-jse</artifactId>
 			<version>2.0.2</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/luaj-jse-2.0.2.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.bcel</groupId>
@@ -78,4 +69,15 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+		<repositories>
+		<repository>
+			<id>ubiquitos</id>
+			<url>http://ubiquitos.googlecode.com/svn/trunk/src/Java/maven/</url>
+		</repository>
+		<repository>
+		    <id>local-processing-org</id>
+		    <url>file://${basedir}/lib</url>
+		</repository>
+	</repositories>
 </project>
