--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
 			<version>3.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>luaj</groupId>
+			<groupId>org.luaj</groupId>
 			<artifactId>luaj-jse</artifactId>
-			<version>2.0.2</version>
+			<version>3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.bcel</groupId>
